# squid-bot-worker

./: .gitignore  Cargo.toml  README.md
src/: context.rs  discord.rs  error.rs  global.rs  http.rs  lib.rs  main.rs  utils.rs
src/discord/: command.rs  command_context.rs  component.rs  interaction.rs  prelude.rs  verification.rs
src/discord/command/: amari.rs  ping.rs  prelude.rs
src/discord/command/fun/: eightball.rs  mod.rs
src/discord/command/mathsolving/: math.rs  mod.rs
src/discord/command/messagecounting/: messages.rs  mod.rs
src/discord/command/utility/: about.rs  afk.rs  links.rs  mod.rs  ping.rs
src/discord/component/: ping.rs
src/redis/: berror.rs  client.rs  error.rs  mod.rs  request.rs  routing.rs  utils.rs
worker/: worker.js
